--- a/src/assets/scss/custom.css
+++ b/src/assets/scss/custom.css
@@ -5,6 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url("https://unpkg.com/bs-brain@2.0.4/components/skills/skill-2/assets/css/skill-2.css");
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11854,7 +11855,69 @@ textarea.form-control-lg {
 }
 
 .bg-social-media {
+  background-color: #f0e7fe;
+}
+
+.border-indigo {
+  border: 1px solid red;
+}
+
+.w-10 {
+  width: 10% !important;
+}
+
+.w-40 {
+  width: 40% !important;
+}
+
+.w-60 {
+  width: 60% !important;
+}
+
+.w-80 {
+  width: 80% !important;
+}
+
+.w-90 {
+  width: 90% !important;
+}
+
+.w-95 {
+  width: 95% !important;
+}
+
+.languages ul {
+  font-size: 80%;
+}
+
+.container small, .container .small {
+  --bs-text-opacity: 1;
+  color: var(--bs-secondary-color) !important;
+}
+
+.text-justify {
+  text-align: justify !important;
+}
+
+.text-blue-300 {
+  color: #6ea8fe;
+}
+
+.progress-bar {
+  color: var(--bs-progress-bar-color);
   background-color: #e0cffc;
+}
+
+h4, .h4 {
+  color: #290661;
+}
+
+h5, .h5 {
+  color: #520dc2;
+}
+
+h6, .h6 {
+  color: #8540f5;
 }
 
 /*# sourceMappingURL=custom.css.map */
