--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -30,6 +30,10 @@
   width: 60% !important;
 }
 
+.w-65 {
+  width: 65% !important;
+}
+
 .w-80 {
   width: 80% !important;
 }
@@ -94,4 +98,10 @@ h5 {
 
 h6 {
   color: $indigo-400;
+}
+
+.whatsapp {
+  position: relative;
+  left: 88%;
+  margin-top: -12%;
 }
